tests/sema/err_redefine.diag
err_redefine.ax:3:5: error: symbol already defined in this scope: 'x'
