tests/sema/err_redefine.ax
fn main():
    let x = 1
    let x = 2
